--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
         "grunt": "~0.4.1",
         "grunt-contrib-qunit": "~0.4.0",
         "grunt-qunit-junit": "~0.1.0",
-        "grunt-contrib-connect": "~0.6.0"
+        "grunt-contrib-connect": "~0.6.0",
+        "grunt-plato": "~1.0.0"
     }
 }
