Updated most dependencies to be filled by bower and not included in /lib

--- a/bower.json
+++ b/bower.json
@@ -28,6 +28,7 @@
         "dojo": "~1.9.3",
         "pegjs": "~0.8.0",
         "requirejs-text": "~2.0.10",
-        "requirejs": "~2.1.11"
+        "requirejs": "~2.1.11",
+        "qunit": "~1.14.0"
     }
 }
