--- a/package.json
+++ b/package.json
@@ -1,11 +1,8 @@
 {
     "name": "ReMarkdown",
-    "version": "0.0.1",
+    "version": "0.0.2",
     "devDependencies": {
         "grunt": "~0.4.1",
-        "grunt-contrib-qunit": "~0.4.0",
-        "grunt-qunit-junit": "~0.1.0",
-        "grunt-contrib-connect": "~0.6.0",
-        "grunt-plato": "~1.0.0"
+        "intern": "~1.5.0"
     }
 }
