--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-    "name": "ReMarkdown",
-    "version": "0.0.4",
-    "devDependencies": {
-        "grunt": "~0.4.1",
-        "intern": "~1.5.0"
-    }
+  "name": "ReMarkdown",
+  "version": "0.0.4",
+  "devDependencies": {
+    "grunt": "~0.4.1",
+    "intern": "~1.5.0",
+    "xmldom": "~0.1.19"
+  }
 }
