--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "0.0.4",
     "devDependencies": {
         "grunt": "~0.4.1",
-        "intern": "~1.5.0"
+        "intern": "~1.5.0",
+        "xmldom" : "~0.1.19"
     }
 }
