--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "ReMarkdown",
-    "version": "0.1.0",
+    "version": "0.1.0-alpha",
     "devDependencies": {
         "intern": "~1.7",
         "xmldom" : "~0.1"
